# agentevals

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentevals/: __init__.py  agent.py  models.py  utils.py
agentevals/skills/: __init__.py  base.py  coherence.py  conciseness.py  correctness.py  faithfulness.py  relevance.py
docs/skills/: correctness.md
tests/: conftest.py  test_agent.py  test_models.py  test_skills.py
