[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentevals"
version = "0.1.0"
description = "Evals agent based on agent-skill architecture for evaluating responses from other agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["evals", "agent", "llm", "evaluation", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.24",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentevals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
